--- a/ui/lib/core/addon/components/form-field.hbs
+++ b/ui/lib/core/addon/components/form-field.hbs
@@ -281,19 +281,52 @@
         {{/if}}
       {{else}}
         {{! Regular Text Input }}
-        <input
-          data-test-input={{@attr.name}}
-          id={{@attr.name}}
-          readonly={{this.isReadOnly}}
-          disabled={{and @attr.options.editDisabled (not @model.isNew)}}
-          autocomplete="off"
-          spellcheck="false"
-          value={{or (get @model this.valuePath) @attr.options.defaultValue}}
-          onchange={{this.onChangeWithEvent}}
-          onkeyup={{this.handleKeyUp}}
-          class="input {{if this.validationError 'has-error-border'}}"
-          maxLength={{@attr.options.characterLimit}}
-        />
+        {{#if (eq @attr.name 'issuer')}}
+          <div class="columns">
+            <div class="column">
+            <input
+              data-test-input={{@attr.name}}
+              id={{@attr.name}}
+              readonly={{this.isReadOnly}}
+              disabled={{and @attr.options.editDisabled (not @model.isNew)}}
+              autocomplete="off"
+              spellcheck="false"
+              value={{parse-url (get @model this.valuePath) key="origin"}}
+              onchange={{this.onChangeWithEvent}}
+              onkeyup={{this.handleKeyUp}}
+              class="input {{if this.validationError 'has-error-border'}}"
+              maxLength={{@attr.options.characterLimit}}
+            />
+            </div>
+            <div class="column">
+            <input
+              readonly={{true}}
+              disabled={{true}}
+              autocomplete="off"
+              spellcheck="false"
+              value={{parse-url (get @model this.valuePath) key="pathname"}}
+              onchange={{this.onChangeWithEvent}}
+              onkeyup={{this.handleKeyUp}}
+              class="input {{if this.validationError 'has-error-border'}}"
+              maxLength={{@attr.options.characterLimit}}
+            />
+            </div>
+          </div>
+        {{else}}
+          <input
+            data-test-input={{@attr.name}}
+            id={{@attr.name}}
+            readonly={{this.isReadOnly}}
+            disabled={{and @attr.options.editDisabled (not @model.isNew)}}
+            autocomplete="off"
+            spellcheck="false"
+            value={{or (get @model this.valuePath) @attr.options.defaultValue}}
+            onchange={{this.onChangeWithEvent}}
+            onkeyup={{this.handleKeyUp}}
+            class="input {{if this.validationError 'has-error-border'}}"
+            maxLength={{@attr.options.characterLimit}}
+          />
+        {{/if}}
         {{#if @attr.options.validationAttr}}
           {{#if (and (get @model this.valuePath) (not (get @model @attr.options.validationAttr)))}}
             <AlertInline @type="danger" @message={{@attr.options.invalidMessage}} />
